--- a/openCrypto.TLS/openCrypto.TLS.csproj
+++ b/openCrypto.TLS/openCrypto.TLS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{BAC9D571-017C-4903-B2B0-F86EE05B3CC4}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -85,7 +85,7 @@
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\openCrypto.NET\openCrypto.NET\openCrypto.NET.csproj">
+    <ProjectReference Include="..\openCrypto.NET\openCrypto.NET.csproj">
       <Project>{59AD989B-7DD7-400B-B2D5-EFBD0004A749}</Project>
       <Name>openCrypto.NET</Name>
     </ProjectReference>
